# external-memory-system

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile.plugin  Dockerfile.server  LICENSE  Makefile  README.md  SKILL.md  deploy.sh  docker-compose.yml  requirements.txt  start.sh  status.sh  stop.sh
.github/workflows/: ci.yml
database/qdrant/: init.json
database/sqlite/: schema.sql
examples/: basic_usage.py  integration_test.py
memory-core-rust/: Cargo.toml  Dockerfile  build.rs
memory-core-rust/src/: agent_registry.rs  context_engine.rs  dreaming_engine.rs  event_bus.rs  graph_engine.rs  isolation_engine.rs  keyword_engine.rs  main.rs  project_manager.rs  scheduler.rs  scoring_engine.rs  storage.rs  summarizer.rs  vector_engine.rs
memory-core-rust/src/embedding/: mod.rs  ollama.rs  openai.rs  siliconflow.rs
memory-plugin/: config.yaml  generate_proto.sh  grpc_client.py  injector.py  memory_cli.py  memory_manager.py  plugin.py  prompt_builder.py  requirements.txt
memory-server/: memory_pb2.py  memory_pb2_grpc.py  server.py  start.sh  stop.sh
proto/: memory.proto
