[package]
name = "memory-core"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
qdrant-client = "1.12"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
dashmap = "6"
thiserror = "2"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
regex = "1"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "memory-server"
path = "src/main.rs"
